--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 :root {
-    --primary-color: #F4CE01;
-    --secondary-color: #0F0F0B;
+    --primary-color: #438acc;
+    --secondary-color: #000000;
 }
 
 * {
